added figure captions, applied styler

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -107,7 +107,7 @@ library(tidyverse)
 ```
 
 ```{r 03-warn-off, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
-options(warn=-1)
+options(warn = -1)
 ```
 
 
@@ -115,9 +115,9 @@ options(warn=-1)
  The [Mauna Loa CO2 data set](https://www.esrl.noaa.gov/gmd/ccgg/trends/data.html), curated by [Dr. Pieter Tans, NOAA/GML](https://www.esrl.noaa.gov/gmd/staff/Pieter.Tans/) and [Dr. Ralph Keeling, Scripps Institution of Oceanography](https://scrippsco2.ucsd.edu/)
 records the atmospheric concentration of carbon dioxide (CO2, in parts per million) at the Mauna Loa research station in Hawaii from 1959 onwards. **Question:** Does the concentration of atmospheric CO2 change over time, and are there any interesting patterns to note?
 ```{r 03-data-co2, warning=FALSE, message=FALSE}
-# mauna loa carbon dioxide data 
+# mauna loa carbon dioxide data
 co2_df <- read_csv("data/mauna_loa.csv") %>%
-		filter(ppm > 0, date_decimal < 2000)
+  filter(ppm > 0, date_decimal < 2000)
 co2_df
 ```
 
@@ -139,9 +139,9 @@ a few basic aspects of a plot that we need to specify:
 We could pass many other possible arguments to the aesthetic mapping and geometric object to change how the plot looks. For 
 the purposes of quickly testing things out to see what they look like, though, we can just go with the default settings:
 
-```{r 03-data-co2-scatter, warning=FALSE, message=FALSE}
-co2_scatter <- ggplot(co2_df, aes(x = date_decimal, y = ppm)) + 
-		geom_point() 
+```{r 03-data-co2-scatter, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of atmospheric concentration of CO2 over time"}
+co2_scatter <- ggplot(co2_df, aes(x = date_decimal, y = ppm)) +
+  geom_point()
 co2_scatter
 ```
 
@@ -151,9 +151,9 @@ However, since time is an ordered quantity, we can try using a line plot instead
 that their `x` coordinate orders the data, and connect the sequence of `x` and `y` coordinates with line segments. Let's again try this with just 
 the default arguments: 
 
-```{r 03-data-co2-line, warning=FALSE, message=FALSE}
-co2_line <- ggplot(co2_df, aes(x = date_decimal, y = ppm)) + 
-		geom_line() 
+```{r 03-data-co2-line, warning=FALSE, message=FALSE, fig.cap = "Line plot of atmospheric concentration of CO2 over time"}
+co2_line <- ggplot(co2_df, aes(x = date_decimal, y = ppm)) +
+  geom_line()
 co2_line
 ```
 
@@ -166,12 +166,12 @@ Now that we have settled on the rough details of the visualization, it is time t
 visual noise to remove. But there are a few things we must do to improve clarity, such as adding informative axis labels and making the font a more readable size.
 To add axis labels, we use the `xlab` and `ylab` functions. To change the font size, we use the `theme` function with the `text` argument:
 
-```{r 03-data-co2-line-2, warning=FALSE, message=FALSE}
-co2_line <- ggplot(co2_df, aes(x = date_decimal, y = ppm)) + 
-                   geom_line() +
-                   xlab('Year') +
-                   ylab('Atmospheric CO2 (ppm)') + 
-                   theme(text = element_text(size = 18))
+```{r 03-data-co2-line-2, warning=FALSE, message=FALSE, fig.cap = "Line plot of atmospheric concentration of CO2 over time with improved axes and labels"}
+co2_line <- ggplot(co2_df, aes(x = date_decimal, y = ppm)) +
+  geom_line() +
+  xlab("Year") +
+  ylab("Atmospheric CO2 (ppm)") +
+  theme(text = element_text(size = 18))
 co2_line
 ```
 
@@ -181,13 +181,13 @@ We scale the horizontal axis using the `scale_x_continuous` function, and the ve
 We can transform the axis by passing the `trans` argument, and set limits by passing the `limits` argument. In particular, here, we 
 will use the `scale_x_continuous` function with the `limits` argument to zoom in on just five years of data (say, 1990-1995):
 
-```{r 03-data-co2-line-3, warning=FALSE, message=FALSE}
-co2_line <- ggplot(co2_df, aes(x = date_decimal, y = ppm)) + 
-                   geom_line() +
-                   xlab('Year') +
-                   ylab('Atmospheric CO2 (ppm)') + 
-                   scale_x_continuous(limits = c(1990, 1995)) +
-                   theme(text = element_text(size = 18))
+```{r 03-data-co2-line-3, warning=FALSE, message=FALSE, fig.cap = "Line plot of atmospheric concentration of CO2 from 1990 to 1995 only"}
+co2_line <- ggplot(co2_df, aes(x = date_decimal, y = ppm)) +
+  geom_line() +
+  xlab("Year") +
+  ylab("Atmospheric CO2 (ppm)") +
+  scale_x_continuous(limits = c(1990, 1995)) +
+  theme(text = element_text(size = 18))
 co2_line
 ```
 
@@ -199,7 +199,7 @@ Therefore, the oscillating pattern in CO2 matches up fairly closely with the two
 ### The island landmass data set
 This data set contains a list of Earth's landmasses as well as their area (in thousands of square miles). **Question:** Are the continents (North / South America, Africa, Europe, Asia, Australia, Antarctica) Earth's seven largest landmasses? If so, what are the next few largest landmasses after those?
 ```{r 03-data-islands, warning=FALSE, message=FALSE}
-# islands data 
+# islands data
 islands_df <- read_csv("data/islands.csv")
 islands_df
 ```
@@ -208,9 +208,9 @@ question is a bar plot, specified by the `geom_bar` function in `ggplot2`. Howev
 of bars to the number of times a value appears in a data frame (its *count*); here, we want to plot exactly the values in the data frame, i.e.,
 the landmass sizes. So we have to pass the `stat = "identity"` argument to `geom_bar`:
 
-```{r 03-data-islands-bar, warning=FALSE, message=FALSE}
-islands_bar <- ggplot(islands_df, aes(x = landmass, y = size)) + 
-			geom_bar(stat = "identity")
+```{r 03-data-islands-bar, warning=FALSE, message=FALSE,  fig.cap = "Bar plot of size for all Earth's landmasses with squished labels"}
+islands_bar <- ggplot(islands_df, aes(x = landmass, y = size)) +
+  geom_bar(stat = "identity")
 islands_bar
 ```
 
@@ -219,11 +219,11 @@ landmasses; let's make the plot a little bit clearer by keeping only the largest
 Then to help us make sure the labels have enough space, we'll use horizontal bars instead of vertical ones. We do this using the 
 `coord_flip` function, which swaps the `x` and `y` coordinate axes:
 
-```{r 03-data-islands-bar-2, warning=FALSE, message=FALSE}
+```{r 03-data-islands-bar-2, warning=FALSE, message=FALSE, fig.cap = "Bar plot of size for Earth's largest 12 landmasses"}
 islands_top12 <- top_n(islands_df, 12, size)
-islands_bar <- ggplot(islands_top12, aes(x = landmass, y = size)) + 
-		geom_bar(stat = "identity") + 
-		coord_flip()
+islands_bar <- ggplot(islands_top12, aes(x = landmass, y = size)) +
+  geom_bar(stat = "identity") +
+  coord_flip()
 islands_bar
 ```
 
@@ -234,8 +234,8 @@ use `mutate` to add a column to the data regarding whether or not the landmass i
 
 ```{r 03-data-islands-bar-3, warning=FALSE, message=FALSE}
 islands_top12 <- top_n(islands_df, 12, size)
-continents <- c('Africa', 'Antarctica', 'Asia', 'Australia', 'Europe', 'North America', 'South America')
-islands_ct <- mutate(islands_top12, is_continent = ifelse(landmass %in% continents, 'Continent', 'Other'))
+continents <- c("Africa", "Antarctica", "Asia", "Australia", "Europe", "North America", "South America")
+islands_ct <- mutate(islands_top12, is_continent = ifelse(landmass %in% continents, "Continent", "Other"))
 islands_ct
 ```
 
@@ -243,12 +243,12 @@ In order to colour the bars, we add the `fill` argument to the aesthetic mapping
 function in the aesthetic mapping to organize the landmasses by their `size` variable.
 Finally, we use the `labs` and `theme` functions to add labels, change the font size, and position the legend:
 
-```{r 03-data-islands-bar-4, warning=FALSE, message=FALSE}
-islands_bar <- ggplot(islands_ct, aes(x = reorder(landmass, size), y = size, fill = is_continent)) + 
-                   geom_bar(stat="identity") +
-                   labs(x = 'Landmass', y = 'Size (1000 square mi)', fill = 'Type') +
-                   coord_flip() +
-                   theme(text = element_text(size = 18), legend.position = c(0.75, 0.45))
+```{r 03-data-islands-bar-4, warning=FALSE, message=FALSE, fig.cap = "Bar plot of size for Earth's largest 12 landmasses coloured by whether its a continent with clearer axes and labels"}
+islands_bar <- ggplot(islands_ct, aes(x = reorder(landmass, size), y = size, fill = is_continent)) +
+  geom_bar(stat = "identity") +
+  labs(x = "Landmass", y = "Size (1000 square mi)", fill = "Type") +
+  coord_flip() +
+  theme(text = element_text(size = 18), legend.position = c(0.75, 0.45))
 islands_bar
 ```
 
@@ -260,6 +260,11 @@ and continents are coloured differently than other landmasses, making it quite c
 This data set contains measurements of the waiting time between eruptions and the subsequent eruption duration (in minutes). **Question:** Is there a 
 relationship between the waiting time before an eruption to the duration of the eruption? 
 
+```{r 03-data-faithful-tibble, echo = F, warning=FALSE, message=FALSE}
+# old faithful eruption time / wait time data convert to tibble
+faithful <- as.tibble(faithful)
+```
+
 ```{r 03-data-faithful, warning=FALSE, message=FALSE}
 # old faithful eruption time / wait time data
 faithful
@@ -267,9 +272,9 @@ faithful
 
 Here again, we investigate the relationship between two quantitative variables (waiting time and eruption time). But if you look at the output of the data frame, you'll notice that neither of the columns are ordered. So, in this case, let's start again with a scatter plot:
 
-```{r 03-data-faithful-scatter, warning=FALSE, message=FALSE}
-faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) + 
-			geom_point()  
+```{r 03-data-faithful-scatter, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time"}
+faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) +
+  geom_point()
 faithful_scatter
 ```
 
@@ -277,11 +282,11 @@ We can see that the data tend to fall into two groups: one with short waiting an
 times. Note that in this case, there is no overplotting: the points are generally nicely visually separated, and the pattern they form is clear.
 In order to refine the visualization, we need only to add axis labels and make the font more readable:
 
-```{r 03-data-faithful-scatter-2, warning=FALSE, message=FALSE}
-faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) + 
-                         geom_point() +
-                         labs(x = 'Waiting Time (mins)', y = 'Eruption Duration (mins)') +
-                         theme(text = element_text(size = 18))
+```{r 03-data-faithful-scatter-2, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time with clearer axes and labels"}
+faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) +
+  geom_point() +
+  labs(x = "Waiting Time (mins)", y = "Eruption Duration (mins)") +
+  theme(text = element_text(size = 18))
 faithful_scatter
 ```
 
@@ -289,6 +294,11 @@ faithful_scatter
 This data set contains measurements of the speed of light (in kilometres per second with 299,000 subtracted) from the year 1879 
 for five experiments, each with 20 consecutive runs. **Question:** Given what we know now about the speed of 
 light (299,792.458 kilometres per second), how accurate were each of the experiments?
+```{r 03-data-morley-tibble, echo = F, warning=FALSE, message=FALSE}
+# michelson morley experimental data
+morley <- as.tibble(morley)
+```
+
 ```{r 03-data-morley, warning=FALSE, message=FALSE}
 # michelson morley experimental data
 morley
@@ -301,9 +311,9 @@ particular variable is distributed in a data set by separating the data into bin
 to show how many data points fell in each bin. To create a histogram in `ggplot2` we will use the `geom_histogram` geometric
 object, setting the `x` axis to the `Speed` measurement variable; and as we did before, let's use the default arguments just to see how things look:
 
-```{r 03-data-morley-hist, warning=FALSE, message=FALSE}
-morley_hist <- ggplot(morley, aes(x = Speed)) + 
-		geom_histogram() 
+```{r 03-data-morley-hist, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data"}
+morley_hist <- ggplot(morley, aes(x = Speed)) +
+  geom_histogram()
 morley_hist
 ```
 
@@ -312,10 +322,10 @@ In order to visualize the true speed of light, we will add a vertical line with 
 to the true value. There is a similar function, `geom_hline`, that is used for plotting horizontal lines. Note that *vertical lines*
 are used to denote quantities on the *horizontal axis*, while *horizontal lines* are used to denote quantities on the *vertical axis*. 
 
-```{r 03-data-morley-hist-2, warning=FALSE, message=FALSE}
-morley_hist <- ggplot(morley, aes(x = Speed)) + 
-                 geom_histogram() +
-                 geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
+```{r 03-data-morley-hist-2, warning=FALSE, message=FALSE,fig.cap = "Histogram of Michelson's speed of light data with vertical line indicating true speed of light"}
+morley_hist <- ggplot(morley, aes(x = Speed)) +
+  geom_histogram() +
+  geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
 morley_hist
 ```
 
@@ -327,10 +337,10 @@ it to the `fill` aesthetic mapping. We make sure the different colours can
 be seen (despite them all sitting on top of each other) by setting the `alpha` argument in `geom_histogram`
 to `0.5` to make the bars slightly translucent:
 
-```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE}
-morley_hist <- ggplot(morley, aes(x = Speed, fill = factor(Expt))) + 
-                 geom_histogram(position = "identity", alpha = 0.5) +
-                 geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
+```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data coloured by experiment"}
+morley_hist <- ggplot(morley, aes(x = Speed, fill = factor(Expt))) +
+  geom_histogram(position = "identity", alpha = 0.5) +
+  geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
 morley_hist
 ```
 
@@ -344,11 +354,11 @@ The argument to `facet_grid` specifies the variable(s) used to split the plot in
 where `veritcal_variable` is used to split the plot vertically, `horizontal_variable` is used to split horizontally, and `.` is used if there should be no split
 along that axis. In our case, we only want to split vertically along the `Expt` variable, so we use `Expt ~ .` as the argument to `facet_grid`.
 
-```{r 03-data-morley-hist-4, warning=FALSE, message=FALSE}
-morley_hist <- ggplot(morley, aes(x = Speed, fill = factor(Expt))) + 
-                 geom_histogram(position = "identity") +
-                 facet_grid(Expt ~ .) +
-                 geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
+```{r 03-data-morley-hist-4, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data split vertically by experiment"}
+morley_hist <- ggplot(morley, aes(x = Speed, fill = factor(Expt))) +
+  geom_histogram(position = "identity") +
+  facet_grid(Expt ~ .) +
+  geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
 morley_hist
 ```
 
@@ -358,14 +368,14 @@ using the `labs` function, and increase the font size to make it readable using 
 is easy to compare the experiments on this plot to one another, it is hard to get a sense 
 for just how accurate all the experiments were overall. For example, how accurate is the value 800 on the plot, relative to the true speed of light?
 To answer this question, we'll use the `mutate` function to transform our data into a relative measure of accuracy rather than absolute measurements:
-```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE}
-morley_rel <- mutate(morley, relative_accuracy = 100*( (299000 + Speed) - 299792.458 ) / (299792.458))
-morley_hist <- ggplot(morley_rel, aes(x = relative_accuracy, fill = factor(Expt))) + 
-                 geom_histogram(position = "identity") +
-                 facet_grid(Expt ~ .) +
-                 geom_vline(xintercept = 0, linetype = "dashed", size = 1.0) + 
-                 labs(x = 'Relative Accuracy (%)', y = '# Measurements', fill = 'Experiment ID') + 
-                 theme(text = element_text(size = 18))
+```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data split vertically by experiment with clearer axes and labels"}
+morley_rel <- mutate(morley, relative_accuracy = 100 * ((299000 + Speed) - 299792.458) / (299792.458))
+morley_hist <- ggplot(morley_rel, aes(x = relative_accuracy, fill = factor(Expt))) +
+  geom_histogram(position = "identity") +
+  facet_grid(Expt ~ .) +
+  geom_vline(xintercept = 0, linetype = "dashed", size = 1.0) +
+  labs(x = "Relative Accuracy (%)", y = "# Measurements", fill = "Experiment ID") +
+  theme(text = element_text(size = 18))
 morley_hist
 ```
 
@@ -463,24 +473,24 @@ vector graphics as much as you like without the image looking bad, while raster 
 Let's investigate how different image file formats behave with a scatter plot of the
 [Old Faithful data set](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat), which happens to be available in base R under the name `faithful`:
 
-```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE}
-library(svglite) #we need this to save SVG files
-faithful_plot <- ggplot(data = faithful, aes(x = waiting, y = eruptions))+
+```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time"}
+library(svglite) # we need this to save SVG files
+faithful_plot <- ggplot(data = faithful, aes(x = waiting, y = eruptions)) +
   geom_point()
 
 faithful_plot
 
-ggsave('faithful_plot.png', faithful_plot)
-ggsave('faithful_plot.jpg', faithful_plot)
-ggsave('faithful_plot.bmp', faithful_plot)
-ggsave('faithful_plot.tiff', faithful_plot)
-ggsave('faithful_plot.svg', faithful_plot)
+ggsave("faithful_plot.png", faithful_plot)
+ggsave("faithful_plot.jpg", faithful_plot)
+ggsave("faithful_plot.bmp", faithful_plot)
+ggsave("faithful_plot.tiff", faithful_plot)
+ggsave("faithful_plot.svg", faithful_plot)
 
-print(paste("PNG filesize: ", file.info('faithful_plot.png')['size'] / 1000000, "MB"))
-print(paste("JPG filesize: ", file.info('faithful_plot.jpg')['size'] / 1000000, "MB"))
-print(paste("BMP filesize: ", file.info('faithful_plot.bmp')['size'] / 1000000, "MB"))
-print(paste("TIFF filesize: ", file.info('faithful_plot.tiff')['size'] / 1000000, "MB"))
-print(paste("SVG filesize: ", file.info('faithful_plot.svg')['size'] / 1000000, "MB"))
+print(paste("PNG filesize: ", file.info("faithful_plot.png")["size"] / 1000000, "MB"))
+print(paste("JPG filesize: ", file.info("faithful_plot.jpg")["size"] / 1000000, "MB"))
+print(paste("BMP filesize: ", file.info("faithful_plot.bmp")["size"] / 1000000, "MB"))
+print(paste("TIFF filesize: ", file.info("faithful_plot.tiff")["size"] / 1000000, "MB"))
+print(paste("SVG filesize: ", file.info("faithful_plot.svg")["size"] / 1000000, "MB"))
 ```
 Wow, that's quite a difference! Notice that for such a simple plot with few graphical elements (points), the vector graphics format (SVG) is over 100 
 times smaller than the uncompressed raster images (BMP, TIFF). Also, note that the JPG format is twice as large as the PNG format since the JPG
@@ -488,11 +498,8 @@ compression algorithm is designed for natural images (not plots). Below, we also
 You can see why vector graphics formats are so useful: because they're just based on mathematical formulas, vector graphics can be scaled up to arbitrary sizes.
 This makes them great for presentation media of all sizes, from papers to posters to billboards.
 
-<figure>
-<center>
-<img src="img/faithful_zoom.png" style="height: 250px"/>
-<img src="img/faithful_zoom.svg" style="height: 250px"/>
-<figcaption> Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats.</figcaption>
-</center>
-</figure>
 
+```{r 03-raster-image, echo=FALSE, fig.cap = "Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats", fig.show="hold", out.width="40%", out.height="250px"}
+knitr::include_graphics("img/faithful_zoom.png")
+knitr::include_graphics("img/faithful_zoom.svg")
+```
