--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -402,7 +402,9 @@ the right number of clusters.
 p2 <- ggplot(clusterings, aes(x = k, y = tot.withinss)) +
         geom_point(size = 2) +
         geom_line() +
-        annotate("text", x = 3.5, y = 50, label="Elbow", size=10, colour = "blue") +
+        #annotate(geom = "line", x = 4, y = 35, xend = 2.65, yend = 27, arrow = arrow(length = unit(2, "mm"))) +
+        geom_segment (aes (x = 4, y = 75, xend = 3.1, yend = 44), arrow = arrow (length = unit (0.2, "cm"))) +
+        annotate("text", x = 4.4, y = 83, label="Elbow", size = 7, colour = "blue") +
         labs(x = "# Clusters", y = "Total WSSD") +
         theme(text = element_text(size=20)) + 
         scale_x_continuous(breaks = 1:9)
