--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -14,7 +14,7 @@ By the end of the chapter, students will be able to:
 * Describe a case where clustering is appropriate, and what insight it might extract from the data.
 * Explain the K-means clustering algorithm.
 * Interpret the output of a K-means analysis.
-* Perform kmeans clustering in R using `kmeans`.
+* Perform K-means clustering in R using `kmeans`.
 * Visualize the output of K-means clustering in R using pair-wise scatter plots.
 * Identify when it is necessary to scale variables before clustering and do this using R.
 * Use the elbow method to choose the number of clusters for K-means.
