fixed mis-match in cluster colouring with text description

--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -113,9 +113,9 @@ where we can easily visualize the clusters on a scatter plot, we can give
 human-made labels to the groups using their positions on
 the plot:
 
-- low loyalty and low satisfaction (<font color="#00BA38">green cluster</font>),
+- low loyalty and low satisfaction (<font color="#619CFF">blue cluster</font>),
 - high loyalty and low satisfaction (<font color="#F8766D">pink cluster</font>), 
-- and high loyalty and high satisfaction (<font color="#619CFF">blue cluster</font>).
+- and high loyalty and high satisfaction (<font color="#00BA38">green cluster</font>).
 
 Once we have made these determinations, we can use them to inform our future business decisions,
 or to ask further questions about our data. For example, here we might notice based on our clustering
