added section to state that scaling is important

--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -412,6 +412,35 @@ p2
 ```
 </center>
 
+## Requirements for data pre-processing with K-means
+
+Similar to k-nearest neighbours classification and regression, K-means 
+clustering uses a distance metric to decide which points are more similar to 
+each other. In K-means similar points typically end up in the same cluster, thus 
+things that can affect how close in distance K-means thinks the points are will
+have a large impact on which cluster data points end up being assigned to.
+Without scaling, any variables that have a large scale will have a much larger 
+effect on deciding cluster assignment than variables with a small scale. 
+To address this problem, we typically standardize our data before clustering.
+Remember from chapter 6, that standardized data is when all variables in a data 
+set have a mean (center) of 0 and a standard deviation (scale) of 1. 
+
+In this chapter, the data we are using are already on the same scale. However, 
+if this is not the case for your data (and it is often not), you can use the 
+`scale` function in R to do this. We show an example of how to use this function 
+below using the data in this chapter:
+
+```{r get-unscaled-data, echo = FALSE, message = FALSE, warning = FALSE}
+unscaled_data <- read_csv('data/marketing.csv') %>%
+	mutate(cluster=as_factor(cluster)) %>% 
+  select(loyalty, csat)
+```
+
+```{r}
+scaled_data <- map_df(unscaled_data, scale)
+scaled_data
+```
+
 ## K-means in R
 
 To peform K-means clustering in R, we use the `kmeans` function. It takes at
