minor edits to text

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -44,7 +44,7 @@ are external references that contain a wealth of additional information on the t
 The purpose of a visualization is to answer a question about a data set of interest. So naturally, the first thing to do **before** creating 
 a visualization is to formulate the question about the data that you are trying to answer. 
 A good visualization will clearly answer your question without distraction; a *great* visualization will suggest even what the question
-was itself without additional explanation. Imagine your visualization as part of a poster presentation for your project; even if you aren't standing
+was itself without additional explanation. Imagine your visualization as part of a poster presentation for a project; even if you aren't standing
 at the poster explaining things, an effective visualization will be able to convey your message to the audience.
 
 Recall [the different data analysis questions](index.html#chapter-learning-objectives) from the first chapter of this book. With the visualizations
@@ -52,7 +52,7 @@ we will cover in this chapter, we will be able to answer *only descriptive and e
 questions, as we have not learned the tools necessary to do that properly just yet.  
 
 As with most coding tasks, it is totally fine (and quite common) to make mistakes and iterate a few times before you find 
-the right visualization for your data and question. There are [many different kinds of plotting graphic](https://serialmentor.com/dataviz/directory-of-visualizations.html) available 
+the right visualization for your data and question. There are [many different kinds of plotting graphics](https://serialmentor.com/dataviz/directory-of-visualizations.html) available 
 to use. For the kinds we will introduce in this course, the general rules of thumb are:
 
 - **line plots** visualize trends with respect to an independent, ordered quantity (e.g. time)
@@ -83,7 +83,7 @@ making it easier for them to understand and remember your message quickly.
 - Ensure the text, symbols, lines, etc., on your visualization are big enough to be easily read.
 - Ensure the data are clearly visible; don’t hide the shape/distribution of the data behind other objects (e.g. a bar).
 - Make sure to use colour schemes that are understandable by those with colourblindness (a surprisingly large fraction of the 
-  overall population). For example, [colorbrewer.org](https://colorbrewer.org)
+  overall population). For example, [colorbrewer.org](https://www.colorbrewer.org)
   and the `RColorBrewer` R library provide the ability to pick such colour schemes, and you can check your visualizations after
   you have created them by uploading to online tools such as the [colour blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/).
 - Redundancy can be helpful; sometimes conveying the same message in multiple ways reinforces it for the audience.
@@ -113,7 +113,9 @@ options(warn = -1)
 
 ### The Mauna Loa CO2 data set 
  The [Mauna Loa CO2 data set](https://www.esrl.noaa.gov/gmd/ccgg/trends/data.html), curated by [Dr. Pieter Tans, NOAA/GML](https://www.esrl.noaa.gov/gmd/staff/Pieter.Tans/) and [Dr. Ralph Keeling, Scripps Institution of Oceanography](https://scrippsco2.ucsd.edu/)
-records the atmospheric concentration of carbon dioxide (CO2, in parts per million) at the Mauna Loa research station in Hawaii from 1959 onwards. **Question:** Does the concentration of atmospheric CO2 change over time, and are there any interesting patterns to note?
+records the atmospheric concentration of carbon dioxide (CO2, in parts per million) at the Mauna Loa research station in Hawaii from 1959 onwards.
+
+**Question:** Does the concentration of atmospheric CO2 change over time, and are there any interesting patterns to note?
 ```{r 03-data-co2, warning=FALSE, message=FALSE}
 # mauna loa carbon dioxide data
 co2_df <- read_csv("data/mauna_loa.csv") %>%
@@ -147,7 +149,7 @@ co2_scatter
 
 Certainly, the visualization shows a clear upward trend in the atmospheric concentration of CO2 over time.
 This plot answers the first part of our question in the affirmative, but that appears to be the only conclusion one can make from the scatter visualization. 
-However, since time is an ordered quantity, we can try using a line plot instead of using the `geom_line` function. Line plots require
+However, since time is an ordered quantity, we can try using a line plot instead using the `geom_line` function. Line plots require
 that their `x` coordinate orders the data, and connect the sequence of `x` and `y` coordinates with line segments. Let's again try this with just 
 the default arguments: 
 
@@ -166,7 +168,7 @@ Now that we have settled on the rough details of the visualization, it is time t
 visual noise to remove. But there are a few things we must do to improve clarity, such as adding informative axis labels and making the font a more readable size.
 To add axis labels, we use the `xlab` and `ylab` functions. To change the font size, we use the `theme` function with the `text` argument:
 
-```{r 03-data-co2-line-2, warning=FALSE, message=FALSE, fig.cap = "Line plot of atmospheric concentration of CO2 over time with improved axes and labels"}
+```{r 03-data-co2-line-2, warning=FALSE, message=FALSE, fig.cap = "Line plot of atmospheric concentration of CO2 over time with clearer axes and labels"}
 co2_line <- ggplot(co2_df, aes(x = date_decimal, y = ppm)) +
   geom_line() +
   xlab("Year") +
@@ -197,7 +199,9 @@ Therefore, the oscillating pattern in CO2 matches up fairly closely with the two
 
 
 ### The island landmass data set
-This data set contains a list of Earth's landmasses as well as their area (in thousands of square miles). **Question:** Are the continents (North / South America, Africa, Europe, Asia, Australia, Antarctica) Earth's seven largest landmasses? If so, what are the next few largest landmasses after those?
+The `islands.csv` data set contains a list of Earth's landmasses as well as their area (in thousands of square miles). 
+
+**Question:** Are the continents (North / South America, Africa, Europe, Asia, Australia, Antarctica) Earth's seven largest landmasses? If so, what are the next few largest landmasses after those?
 ```{r 03-data-islands, warning=FALSE, message=FALSE}
 # islands data
 islands_df <- read_csv("data/islands.csv")
@@ -208,14 +212,13 @@ question is a bar plot, specified by the `geom_bar` function in `ggplot2`. Howev
 of bars to the number of times a value appears in a data frame (its *count*); here, we want to plot exactly the values in the data frame, i.e.,
 the landmass sizes. So we have to pass the `stat = "identity"` argument to `geom_bar`:
 
-```{r 03-data-islands-bar, warning=FALSE, message=FALSE,  fig.cap = "Bar plot of size for all Earth's landmasses with squished labels"}
+```{r 03-data-islands-bar, warning=FALSE, message=FALSE,  fig.cap = "Bar plot of all Earth's landmasses' size with squished labels"}
 islands_bar <- ggplot(islands_df, aes(x = landmass, y = size)) +
   geom_bar(stat = "identity")
 islands_bar
 ```
 
-Alright, not bad! This plot is definitely the right kind of visualization, as we can clearly see and compare sizes of landmasses. The major issues are that the smaller landmasses' sizes are hard to distinguish, and the names of the landmasses are obscuring each other as they have been squished into too little space. But remember that the question we asked was only about the largest
-landmasses; let's make the plot a little bit clearer by keeping only the largest 12 landmasses. We do this using the `top_n` function.
+Alright, not bad! This plot is definitely the right kind of visualization, as we can clearly see and compare sizes of landmasses. The major issues are that the smaller landmasses' sizes are hard to distinguish, and the names of the landmasses are obscuring each other as they have been squished into too little space. But remember that the question we asked was only about the largest landmasses; let's make the plot a little bit clearer by keeping only the largest 12 landmasses. We do this using the `top_n` function.
 Then to help us make sure the labels have enough space, we'll use horizontal bars instead of vertical ones. We do this using the 
 `coord_flip` function, which swaps the `x` and `y` coordinate axes:
 
@@ -257,8 +260,9 @@ and continents are coloured differently than other landmasses, making it quite c
 
 
 ### The Old Faithful eruption/waiting time data set
-This data set contains measurements of the waiting time between eruptions and the subsequent eruption duration (in minutes). **Question:** Is there a 
-relationship between the waiting time before an eruption to the duration of the eruption? 
+The `faithful` data set contains measurements of the waiting time between eruptions and the subsequent eruption duration (in minutes). 
+
+**Question:** Is there a relationship between the waiting time before an eruption to the duration of the eruption? 
 
 ```{r 03-data-faithful-tibble, echo = F, warning=FALSE, message=FALSE}
 # old faithful eruption time / wait time data convert to tibble
@@ -291,8 +295,10 @@ faithful_scatter
 ```
 
 ### The Michelson speed of light data set
-This data set contains measurements of the speed of light (in kilometres per second with 299,000 subtracted) from the year 1879 
-for five experiments, each with 20 consecutive runs. **Question:** Given what we know now about the speed of 
+The `morley` data set contains measurements of the speed of light (in kilometres per second with 299,000 subtracted) from the year 1879 
+for five experiments, each with 20 consecutive runs.
+
+**Question:** Given what we know now about the speed of 
 light (299,792.458 kilometres per second), how accurate were each of the experiments?
 ```{r 03-data-morley-tibble, echo = F, warning=FALSE, message=FALSE}
 # michelson morley experimental data
@@ -368,7 +374,7 @@ using the `labs` function, and increase the font size to make it readable using 
 is easy to compare the experiments on this plot to one another, it is hard to get a sense 
 for just how accurate all the experiments were overall. For example, how accurate is the value 800 on the plot, relative to the true speed of light?
 To answer this question, we'll use the `mutate` function to transform our data into a relative measure of accuracy rather than absolute measurements:
-```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data split vertically by experiment with clearer axes and labels"}
+```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE, fig.cap = "Histogram of relative accuracy split vertically by experiment with clearer axes and labels"}
 morley_rel <- mutate(morley, relative_accuracy = 100 * ((299000 + Speed) - 299792.458) / (299792.458))
 morley_hist <- ggplot(morley_rel, aes(x = relative_accuracy, fill = factor(Expt))) +
   geom_histogram(position = "identity") +
