edited learning outcomes, fixed plot size for last image (raster vs vector)

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -15,13 +15,14 @@ are external references that contain a wealth of additional information on the t
 
 ## Chapter learning objectives
 
-- Describe when to use the following kinds of visualizations:
+- Describe when to use the following kinds of visualizations to answer specific questions using a dataset:
     - scatter plots
     - line plots
     - bar plots 
     - histogram plots
-- Given a data set and a question, select from the above plot types to create a visualization that best answers the question
+- Given a data set and a question, select from the above plot types and use R to create a visualization that best answers the question
 - Given a visualization and a question, evaluate the effectiveness of the visualization and suggest improvements to better answer the question
+- Referring to the visualization, communicate the conclusions in nontechnical terms
 - Identify rules of thumb for creating effective visualizations 
 - Define the three key aspects of ggplot objects:
     - aesthetic mappings
@@ -260,7 +261,7 @@ and continents are coloured differently than other landmasses, making it quite c
 
 
 ### The Old Faithful eruption/waiting time data set
-The `faithful` data set contains measurements of the waiting time between eruptions and the subsequent eruption duration (in minutes). 
+The `faithful` data set contains measurements of the waiting time between eruptions and the subsequent eruption duration (in minutes). The `faithful` data set is available in base R under the name `faithful` so it does not need to be loaded.
 
 **Question:** Is there a relationship between the waiting time before an eruption to the duration of the eruption? 
 
@@ -296,7 +297,7 @@ faithful_scatter
 
 ### The Michelson speed of light data set
 The `morley` data set contains measurements of the speed of light (in kilometres per second with 299,000 subtracted) from the year 1879 
-for five experiments, each with 20 consecutive runs.
+for five experiments, each with 20 consecutive runs. This data set is available in base R under the name `morley` so it does not need to be loaded.
 
 **Question:** Given what we know now about the speed of 
 light (299,792.458 kilometres per second), how accurate were each of the experiments?
@@ -477,7 +478,7 @@ vector graphics as much as you like without the image looking bad, while raster 
 
 
 Let's investigate how different image file formats behave with a scatter plot of the
-[Old Faithful data set](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat), which happens to be available in base R under the name `faithful`:
+[Old Faithful data set](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat):
 
 ```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of waiting time and eruption time"}
 library(svglite) # we need this to save SVG files
@@ -505,7 +506,7 @@ You can see why vector graphics formats are so useful: because they're just base
 This makes them great for presentation media of all sizes, from papers to posters to billboards.
 
 
-```{r 03-raster-image, echo=FALSE, fig.cap = "Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats", fig.show="hold", out.width="40%", out.height="250px"}
+```{r 03-raster-image, echo=FALSE, fig.cap = "Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats", fig.show="hold", out.width="230px", out.height="200px", fig.align= "center", message =F}
 knitr::include_graphics("img/faithful_zoom.png")
 knitr::include_graphics("img/faithful_zoom.svg")
 ```
