--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -84,7 +84,7 @@ making it easier for them to understand and remember your message quickly.
 - Ensure the text, symbols, lines, etc., on your visualization are big enough to be easily read.
 - Ensure the data are clearly visible; don’t hide the shape/distribution of the data behind other objects (e.g. a bar).
 - Make sure to use colour schemes that are understandable by those with colourblindness (a surprisingly large fraction of the 
-  overall population). For example, [colorbrewer.org](https://www.colorbrewer.org)
+  overall population). For example, [colorbrewer.org](https://colorbrewer2.org)
   and the `RColorBrewer` R library provide the ability to pick such colour schemes, and you can check your visualizations after
   you have created them by uploading to online tools such as the [colour blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/).
 - Redundancy can be helpful; sometimes conveying the same message in multiple ways reinforces it for the audience.
