--- a/index.Rmd
+++ b/index.Rmd
@@ -35,8 +35,8 @@ output:
 ```{r setup, include=FALSE}
 library(forcats)
 
-#read canlang data from GitHub and place it in the data directory
-can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst/extdata/can_lang.csv") %>% 
+# read canlang data from GitHub and place it in the data directory
+can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst/extdata/can_lang.csv") %>%
   readr::write_csv("data/can_lang.csv")
 ```
 
@@ -92,7 +92,9 @@ The name Jupyter came from combining the names of the three programming language
 
 A notebook looks like this:
 
-<img src="img/jupyter.png">
+```{r img-jupyter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Jupyter Notebook", fig.retina = 2}
+knitr::include_graphics("img/jupyter.png")
+```
 
 We have included a short demo video here to help you get started and to introduce you to R and Jupyter. 
 However, the best way to learn how to write and run code and formattable text in a Jupyter notebook is to do it yourself! [Here is a worksheet](https://github.com/UBC-DSCI/dsci-100-assets/blob/master/2019-fall/materials/worksheet_01/worksheet_01.ipynb) that provides a step-by-step guide through the basics.
@@ -103,7 +105,10 @@ However, the best way to learn how to write and run code and formattable text in
 
 Often, the first thing we need to do in data analysis is to load a dataset into R. When we bring spreadsheet-like (think Microsoft Excel tables) data, generally shaped like a rectangle, into R it is represented as what we call a *data frame* object. It is very similar to a spreadsheet where the rows are the collected observations and the columns are the variables. 
 
-<img src="img/spreadsheet_vs_dataframe.PNG" width="850"/>
+
+```{r img-spreadsheet-vs-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A spreadsheet versus a data frame in R", out.width="850", fig.retina = 2}
+knitr::include_graphics("img/spreadsheet_vs_dataframe.PNG")
+```
 
 The first kind of data we will learn how to load into R (as a data frame) is the 
 spreadsheet-like *comma-separated values* format (`.csv` for short).
@@ -190,9 +195,9 @@ and 6 columns:
 1. `category`: Higher level language category (describing whether the language is an Official Canadian language, an Aboriginal language, or a Non-Official and Non-Aboriginal language).
 2. `language`: Language queried about on the Canadian Census.
 3. `mother_tongue`: Total count of Canadians from the Census who reported the language as their mother tongue. Mother tongue is generally defined as the language someone was exposed to since birth.
-4. `most_at_home`: Total Count of Canadians from the Census who reported the language as spoken most often at home.
-5. `most_at_work`: Total Count of Canadians from the Census who reported the language as used most often at work for the population.
-6. `lang_known`: Total Count of Canadians from the Census who reported knowledge of language for the population in private households.
+4. `most_at_home`: Total count of Canadians from the Census who reported the language as spoken most often at home.
+5. `most_at_work`: Total count of Canadians from the Census who reported the language as used most often at work for the population.
+6. `lang_known`: Total count of Canadians from the Census who reported knowledge of language for the population in private households.
 
 Now let's use `select` to extract the language column from this data frame. To do this, we need to provide the `select` function with two arguments. The first argument is the 
 name of the data frame object, which in this example is `can_lang`. The second argument is the column name that we want to select, here `language`. After passing these two arguments,
@@ -274,7 +279,7 @@ including the `ggplot` function that we will use shortly for our visualization. 
 can_lang
 ```
 
-We will begin with a scatter plot of the income and property value columns from our data frame.
+We will begin with a scatter plot of the `mother_tongue` and `most_at_home` columns from our data frame.
 To create a scatter plot of these two variables using the `ggplot` function, we do the following: 
 
 1. call the `ggplot` function
@@ -283,12 +288,10 @@ To create a scatter plot of these two variables using the `ggplot` function, we 
 4. add a `+` symbol at the end of the `ggplot` call to add a layer to the plot
 5. call the `geom_point` function to tell R that we want to represent the data points as dots/points to create a scatter plot.
 
-<center>
-```{r mother_tongue_vs_most_at_home, fig.width=5.75, fig.height=5, warning=FALSE}
+```{r mother-tongue-vs-most-at-home, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
-    geom_point()
+  geom_point()
 ``` 
-</center>
 
 > **In case you have used R before and are curious:** 
 > There are a small number of situations in which you can have a single R expression span multiple lines. 
@@ -321,16 +324,16 @@ informative labels for the x and y axes. Again, since we are specifying words
 and `ylab`, we surround them with double quotes. There are many more layers we 
 can add to format the plot further, and we will explore these in later chapters.
 
-```{r mother_tongue_vs_most_at_home_labs, fig.width=5.75, fig.height=5, warning=FALSE}
+```{r mother-tongue-vs-most-at-home-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
-    geom_point() +
-    xlab("Language spoken most at home (number of Canadian residents)") +
-    ylab("Mother tongue (number of Canadian residents)")    
+  geom_point() +
+  xlab("Language spoken most at home (number of Canadian residents)") +
+  ylab("Mother tongue (number of Canadian residents)")
 ```
 
 Most of the data points from the 214 observations in this data set are bunched up in the lower left-handside of this visualization. This is because many many more people in Canada speak the two official languages (English and French). Thus to answer our question, we will need to adjust the scale of the x and y axes so that they are on a log scale. We can again add additional layers to the plot object using the `+` symbol to do this:
 
-```{r mother_tongue_vs_most_at_home_scale, fig.width=5.75, fig.height=5, warning=FALSE}
+```{r mother-tongue-vs-most-at-home-scale, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with log adjusted x and y axes"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point() +
   xlab("Language spoken most at home (number of Canadian residents)") +
@@ -350,8 +353,8 @@ from a visualization.
 ### Changing the units
 
 ```{r changing_the_units, include = FALSE}
-english_mother_tongue <- can_lang %>% 
-  filter(language == "English") %>% 
+english_mother_tongue <- can_lang %>%
+  filter(language == "English") %>%
   pull(mother_tongue)
 census_popn <- 35151728
 ```
@@ -388,7 +391,7 @@ can_lang
 
 Finally, let's visualize the data now that we have represented it as proportions (and change our axis labels to reflect this change in units!):
 
-```{r mother_tongue_vs_most_at_home_scale_props, fig.width=5.75, fig.height=5, warning=FALSE}
+```{r mother-tongue-vs-most-at-home-scale-props, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point() +
   xlab("Language spoken most at home (proportion of Canadian residents)") +
@@ -407,11 +410,11 @@ scatter plot to represent each language's higher-level language category.
 
 To do this, we modify our scatter plot code above. Specifically, we will add an argument to the `aes` function, specifying that the points should be coloured by the `category` column:
 
-```{r scatter_colour_by_category, fig.width=7.75, fig.height=4, warning=FALSE}
+```{r scatter-colour-by-category, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue, color = category)) +
   geom_point() +
-  xlab("Language spoken most at home (number of Canadian residents)") +
-  ylab("Mother tongue (number of Canadian residents)") +
+  xlab("Language spoken most at home (proportion of Canadian residents)") +
+  ylab("Mother tongue (proportion of Canadian residents)") +
   scale_x_log10(labels = scales::comma) +
   scale_y_log10(labels = scales::comma)
 ```
@@ -438,7 +441,7 @@ contrast. This demonstrates the power of R: in relatively few lines of code, we
 are able to create an entire data science workflow with a highly effective
 data visualization.
 
-```{r nachos_to_cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE}
+```{r nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Putting it all together: Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
 library(tidyverse)
 
 can_lang <- read_csv("data/can_lang.csv")
@@ -446,14 +449,16 @@ can_lang <- read_csv("data/can_lang.csv")
 can_lang <- mutate(can_lang, mother_tongue = mother_tongue / 35151728)
 can_lang <- mutate(can_lang, most_at_home = most_at_home / 35151728)
 
-ggplot(can_lang, aes(x = most_at_home, 
-                     y = mother_tongue, 
-                     colour = category,
-                     shape = category)) + # map categories to different shapes
+ggplot(can_lang, aes(
+  x = most_at_home,
+  y = mother_tongue,
+  colour = category,
+  shape = category
+)) + # map categories to different shapes
   geom_point(alpha = 0.6) + # set the transparency of the points
-  scale_color_manual(values = c("deepskyblue2","firebrick1","black")) + # choose point colours
-  xlab("Language spoken most at home (number of Canadian residents)") +
-  ylab("Mother tongue (number of Canadian residents)") +
+  scale_color_manual(values = c("deepskyblue2", "firebrick1", "black")) + # choose point colours
+  xlab("Language spoken most at home (proportion of Canadian residents)") +
+  ylab("Mother tongue (proportion of Canadian residents)") +
   scale_x_log10(labels = scales::comma) +
   scale_y_log10(labels = scales::comma) +
   theme_bw() # use a theme to have a white background
